Code split scrollbar and fix fetch on mount

--- a/frontend/components/ChannelBlurb.css
+++ b/frontend/components/ChannelBlurb.css
@@ -60,7 +60,3 @@
 .ChannelBlurb .Btn__edit {
   color: #0984E3;
 }
-
-.Channel--has-history .ChannelBlurb {
-  display: none;
-}
